break command (pain)